# rust-blog

./: Cargo.toml  README.md
markdowns/: test.md
src/: lib.rs  main.rs
src/lib/: mod.rs  routes.rs  watcher.rs
templates/: base.html  index.html
